# neu4mes

./: .coverage  .coveralls.yml  .gitignore  .readthedocs.yaml  .travis.yml  Input.py  LICENSE  Linear.py  Neu4mes.py  NeuObj.py  Output.py  README.md  Relation.py  Relu.py  Sum.py  complex_oscillator.py  fit_linear_oscillator_rnn.py  multiprov.py  oscillator.py  pendulum.py  prova.py  pyproject.toml  requirements.txt  requirements_macos_x86.txt  setup.py  springdamper.py  test.py  test_process.py  to_do.txt  vehicle.py
Neu4mes/: Input.py  Linear.py  LinearBias.py  LocalModel.py  Minus.py  Neu4mes.py  NeuObj.py  Output.py  Relation.py  Relu.py  Sum.py  Trigonometric.py  __init__.py  arithmetic.py
TODO/: test.py
doc/: conf.py  requirements.txt
docs/: conf.py  index.rst  neu4mes.rst  requirements.txt
examples/: double_massspringdamper.py  mass-spring-damper.py  nonlinear_fit.py  pendulum.py  pendulum_parametric.py  springdamper.py  test.py  test_Connect.py  test_Fuzzify.py  test_LocalModel.py  test_ParamFun.py  test_Parameter.py  test_State.py  test_export_model.py  test_function_call.py  test_fuzzify.py  test_model_predict.py  test_notebook.ipynb  test_parameter.py  test_parametric_fun.py  test_state.py  vehicle.py
mplplots/: plots.py
neu4mes/: __init__.py  activation.py  arithmetic.py  dataset.py  dropout.py  earlystopping.py  export.py  fir.py  fullyconnected.py  fuzzify.py  initializer.py  input.py  linear.py  localmodel.py  logger.py  loss.py  model.py  modeldef.py  neu4mes.py  optimizer.py  output.py  parameter.py  parametricfunction.py  part.py  relation.py  (+7 more)
(+363 files in other folders)
