[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "neu4mes"
authors = [{name = "Gastone Pietro Rosati Papini", email = "tonegas@gmail.com"},
           {name = "Sebastiano Taddei", email = "sebastianotaddei@gmail.com"}]
dynamic = ["version", "description"]
